--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.4.0",
     "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
@@ -42,6 +43,7 @@
     "@nestjs/testing": "^9.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/luxon": "^3.3.0",
