обновил ноду, призму, перешел на crdb

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@ POSTGRES_DB_USERNAME="username"
 POSTGRES_DB_PASSWORD="password"
 POSTGRES_DB_NAME="kittenglow"
 
+CRDB_DB_USERNAME="root"
+CRDB_DB_PASSWORD=""
+CRDB_DB_NAME="kittenglow"
+
 POSTGRES_DATABASE_URL="postgresql://${POSTGRES_DB_USERNAME}:${POSTGRES_DB_PASSWORD}@postgres:5432/${POSTGRES_DB_NAME}?connect_timeout=300"
+CRDB_DATABASE_URL="postgresql://${CRDB_DB_USERNAME}:${CRDB_DB_PASSWORD}@crdb:26257/${CRDB_DB_NAME}?sslmode=disable&connect_timeout=300"
 
 APP_DOMAIN="kittenglow.me"
